Add endpoint to download swagger.json file
